--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TheWeather</title>
+</head>
+
+<body>
+  <nav>
+    <form action="POST" class="form" id="form">
+      <label for="location">Search Location</label>
+      <input type="text" name="location" class="search-location" id="search-location" placeholder="London">
+      <button class="search" id="search" type="submit">Search</button>
+    </form>
+  </nav>
+
+  <main>
+    <div class="temp-display" id="temp-display"></div>
+  </main>
+  <script type="module" src="/main.js"></script>
+</body>
+
 </html>
