--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           name="location"
           class="search-location"
           id="search-location"
-          placeholder="London"
+          placeholder="Location"
+          autocomplete="off"
         />
-        <button class="search" id="search" type="button"></button>
       </div>
       <div class="temp-toggle-container">
         <div class="toggle-temp" id="toggle-temp">C</div>
@@ -29,8 +29,13 @@
         <div class="location-container">
           <h2 id="location-name"></h2>
         </div>
-        <img class="current-condition" id="current-condition" />
-        <div class="current-temp" id="current-temp"></div>
+        <div class="current-data-container">
+          <img class="current-condition" id="current-condition" />
+          <div class="current-temp" id="current-temp">
+            <p id="temp"></p>
+            <p id="feels-like"></p>
+          </div>
+        </div>
       </div>
       <div class="weather-data forecast" id="forecast-data"></div>
     </main>
