--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -61,7 +61,7 @@
       </div>
       <!-- prettier-ignore -->
       <button type="button" class="weather-data expand-forecast" id="expand-forecast">
-        <img class="chevron" id="chevron" src="./img/chevron-down.png" />
+        <img class="chevron" id="chevron" src="./resources/img/chevron-down.png" />
       </button>
       <div class="weather-data forecast" id="forecast-data"></div>
     </main>
