feat: add favicons

--- a/index.html
+++ b/index.html
@@ -2,7 +2,32 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./resources/img/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./resources/img/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./resources/img/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./resources/img/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./resources/img/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- <a href="https://www.flaticon.com/free-icons/weather" title="weather icons">Weather icons created by Freepik - Flaticon</a> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
   </head>
@@ -61,8 +86,8 @@
       </div>
       <!-- prettier-ignore -->
       <button type="button" class="weather-data expand-forecast" id="expand-forecast">
-        <img class="chevron" id="chevron" src="./resources/img/chevron-down.png" />
-      </button>
+      <img class="chevron" id="chevron" src="./resources/img/chevron-down.png" />
+    </button>
       <div class="weather-data forecast" id="forecast-data"></div>
     </main>
     <script type="module" src="/main.js"></script>
