feat: add error message and keyframe/animation mixins

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           placeholder="Location"
           autocomplete="off"
         />
+        <p class="error-msg hidden" id="error-msg">Locaion not found</p>
       </div>
       <div class="temp-toggle-container">
         <div class="toggle-temp" id="toggle-temp">C</div>
