chore: fix text alignment

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <!-- prettier-ignore -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,300;1,400&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,300;1,400&display=swap"
+    rel="stylesheet" />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -50,7 +51,9 @@
         <p class="error-msg hidden" id="error-msg">Locaion not found</p>
       </div>
       <div class="temp-toggle-container">
-        <div class="toggle-temp" id="toggle-temp"><p>C</p></div>
+        <div class="toggle-temp" id="toggle-temp">
+          <p>C</p>
+        </div>
       </div>
     </nav>
 
