chore: fix spelling

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           placeholder="Location"
           autocomplete="off"
         />
-        <p class="error-msg hidden" id="error-msg">Locaion not found</p>
+        <p class="error-msg hidden" id="error-msg">Location not found</p>
       </div>
       <div class="temp-toggle-container">
         <div class="toggle-temp" id="toggle-temp">
